# meeting-pipe

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  DESIGN.md  GLOSSARY.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  SPEC.md  config.example.toml  glossary.example.toml
.claude/: settings.json
.claude/commands/: audit.md  file-task.md  spike.md  tech-task.md
.design-sync/: NOTES.md  config.json  conventions.md  make-entry.mjs
.design-sync/docs/: Icon.md  MeetingPrompt.md  MenuBarDropdown.md  MenuItem.md  MenuSep.md  Notification.md  OnboardingPermissions.md  PWField.md  PWGroup.md  PWRow.md  PWSegmented.md  PWSlider.md  PWStatusPill.md  PWTag.md  PWToggle.md  PermRow.md  PreferencesWindow.md  PromptButton.md  SLActionItem.md  SLBullets.md  SLEmpty.md  SLSection.md  SLSegmented.md  SLStatusPill.md  SummaryLibrary.md
.design-sync/fonts/: fonts.css
.design-sync/previews/: Icon.tsx  MeetingPrompt.tsx  MenuBarDropdown.tsx  MenuItem.tsx  MenuSep.tsx  Notification.tsx  OnboardingPermissions.tsx  PWField.tsx  PWGroup.tsx  PWRow.tsx  PWSegmented.tsx  PWSlider.tsx  PWStatusPill.tsx  PWTag.tsx  PWToggle.tsx  PermRow.tsx  PreferencesWindow.tsx  PromptButton.tsx  SLActionItem.tsx  SLBullets.tsx  SLEmpty.tsx  SLSection.tsx  SLSegmented.tsx  SLStatusPill.tsx  SummaryLibrary.tsx
.github/workflows/: ci.yml
.impeccable/: design.json
bench/parakeet-vs-whisperx/: REPORT.md
daemon/: CLAUDE.md  Package.swift
daemon/Sources/MeetingPipe/: App.swift  AskView.swift  AudioPlaybackController.swift  AudioRetention.swift  AudioRetentionSweep.swift  AudioRouter.swift  AudioTab.swift  AudioTranscoder.swift  (+159 more)
daemon/scripts/: ai-summarize.swift  auto1-app-intents-probe.sh  ax-dump-meeting.swift  cal1-calendar-probe.swift  dep1-native-audio-spike.swift  det2-process-tap-probe.swift  end6-device-idle-probe.swift  mic7-meet-mute-probe.js  mic8-native-mute-probe.sh
design/: README.md  REDESIGN.md  SKILL.md  colors_and_type.css  package.json
design/preview/: buttons.html  colors-accents.html  colors-brand.html  colors-ink-scale.html  elevation.html  form-controls.html  iconography.html  logos.html  radii.html  spacing.html  status-pills.html  tokens.html  type-body.html  type-display.html
docs/: SETUP.md  engine-comparison.md  local-llm-quality.md  operational-state-2026-q2.md  test-coverage.md
docs/architecture/: signal-fusion-and-mic-gating.md
docs/audits/: 2026-06-10-full-audit.md  2026-06-26-done-task-validation.md  dsn18-contrast-ratios.md
docs/backlog/: meetingpipe-q3-backlog.md  meetingpipe-q4-backlog.md  meetingpipe-q5-backlog.md  meetingpipe-q6-backlog.md  q2-final.md  q2-ui-addendum-final.md  q3-final.md  q4-final.md  q5-final.md  q6-final.md
docs/decisions/: 0001-coreaudio-hal-tap-capture.md  0002-asr-engine-sherpa-then-fluidaudio.md  0003-filesystem-library-source-of-truth.md  0004-menu-bar-over-dock-app.md  0005-no-em-dash-lint.md  0006-swift-over-go-for-hub.md  0007-python-sidecar.md  0008-verdict-fusion-architecture.md  0009-stereo-on-disk-mono-on-playback.md  0010-inputdevicesignal-disposition.md  0011-calendarcontextsignal-disposition.md  0014-typed-summary-model.md  0015-corrections-tab-wired.md  0016-capture-first-mute-redaction.md
docs/gtm/: local-first-regulated.md
docs/planning/: 2026-05-next.md
docs/research/: 2026-06-26-local-ai-intelligence.md  2026-06-26-meeting-level-ux.md
docs/spikes/: ai2-embedding-rag-latency.md  ai2-rag-latency-results-14b.json  ai2-rag-latency-results-3b.json  ai5-classification-results.json  ai5-meeting-type-classification.md  ai5_agreement.py  auto1-app-intents-metadata.md  cal1-eventkit-calendar-context.md  dep1-avfoundation-vs-ffmpeg.md  det2-process-tap-attribution.md  dist1-bundle-runtime.md  dist2-swift-port-of-the-pipeline.md  dv2-attendee-audit-results.json  dv2-attendee-quality.md  dv2_attendee_audit.py  end6-device-idle-corroborator.md  local12-mlx-swift-trigger-evaluation.md  local12_bench.py  mic7-browser-mute-oracle.md  mic8-log-correlation-results.json  mic8-native-mute-signals.md  mic8_log_correlation.py
docs/validation/: valid1-acceptance-runbook.md
pipeline/: CLAUDE.md  pyproject.toml
pipeline/src/mp/: __init__.py  __main__.py  action_clusters.py  actions.py  ai2_spike.py  analyze_detection.py  ask.py  backend_fallback.py  backup.py  chunking.py  classify.py  cloudsync.py  config.py  corrections.py  diarize.py  diarize_cleanup.py  digest.py  doctor.py  dogfood.py  egress_guard.py  embed_index.py  endpoints.py  engine.py  entry.py  events.py  finalize.py  glossary.py  json_extract.py  local_server.py  logs_cmd.py  markdown.py  markers.py  merge_meetings.py  orchestrate.py  prefetch_model.py  prep.py  prompt_safety.py  provider_claude_cli.py  provider_openai.py  publish_cmd.py  (+25 more)
pipeline/src/mp/prompts/: diarize_cleanup.md  meeting_summary.md
pipeline/tests/: conftest.py  test_action_clusters.py  test_actions.py  test_ai2_spike.py  test_analyze_detection.py  test_ask.py  test_backend_fallback.py  test_backup_restore.py  test_chunking.py  test_ci3_parity.py  test_ci4_contracts.py  test_classify.py  test_cloudsync.py  test_config.py  test_corrections.py  test_diarize.py  test_diarize_cleanup.py  test_digest.py  test_doctor.py  test_dogfood.py  test_dogfood_report.py  test_egress_guard.py  test_embed_index.py  test_endpoints.py  test_engine.py  test_entry.py  test_entry_contract.py  test_events.py  test_finalize_cmd.py  test_glossary.py  test_local_server.py  test_main_dispatch.py  test_markdown.py  test_markers.py  test_merge_meetings.py  test_orchestrate.py  test_prefetch_model.py  test_prep.py  test_progress_heartbeat.py  test_prompt_safety.py  (+31 more)
scripts/: bundle-runtime.sh  coverage.sh  dogfood_report.py  dump_window_titles.swift  engine_compare_report.py  extract_detection_trace.py  gen-icon.swift  gen-readme-hero.swift  gen_contract_fixtures.py  install.sh  launchd.plist.template  pre-commit  prune-worktrees.sh  rebuild.sh  redact_detection_trace.py  tail-events.sh  test-prune-worktrees.sh  truth_fences.py  uninstall.sh  valid1_check.py
scripts/lib/: dev-cert.sh  sign-app.sh
(+379 files in other folders)
