[project]
name = "meeting-pipe"
version = "0.1.0"
description = "Local meeting transcription + summarization + Notion publishing pipeline"
requires-python = ">=3.11,<3.13"
readme = "../README.md"
license = { text = "MIT" }
authors = [{ name = "meeting-pipe contributors" }]

dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "tomli>=2.0.1; python_version < '3.11'",
    # ASR. mlx-whisper is the Apple-Silicon-native MLX/Metal backend; it
    # outperforms faster-whisper-on-CPU by ~5-10× on M-series and supports
    # all 99 Whisper languages with word-level timestamps. faster-whisper
    # stays in the dep list as a graceful fallback for non-Apple-Silicon
    # environments (CI, Linux).
    "mlx-whisper>=0.4.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Local-LLM summarization (P2). LocalSummaryClient lazy-spawns
    # mlx_lm.server when summarization.backend = "local" or "auto".
    # Apple Silicon only; fall back to backend="anthropic" elsewhere.
    "mlx-lm>=0.20; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.0.3",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    # Diarization runs in Swift via FluidAudio (Parakeet TDT + pyannote
    # on the Apple Neural Engine). The Python fallback only does
    # channel-aware labelling on stereo recordings, with no embedding
    # step and no ONNX runtime needed.
    # Notion + auth + retries.
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.1",
    "ruff>=0.5.0",
]

[project.scripts]
mp = "mp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
