[project]
name = "meeting-pipe"
version = "0.1.0"
description = "Local meeting transcription + summarization + Notion publishing pipeline"
requires-python = ">=3.11,<3.13"
readme = "../README.md"
license = { text = "MIT" }
authors = [{ name = "meeting-pipe contributors" }]

dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    # ASR + diarization run in Swift (FluidAudio: Parakeet TDT + pyannote
    # on the Apple Neural Engine). The Python pipeline only summarizes
    # and publishes; it reads the daemon-produced sidecar JSON.
    #
    # Local-LLM summarization. LocalSummaryClient lazy-spawns mlx_lm.server
    # when summarization.backend = "local" or "auto". Apple Silicon only;
    # fall back to backend="anthropic" elsewhere.
    "mlx-lm>=0.20; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # On-device sentence embeddings for the library index (AI2 spike / AI3
    # retrieval). multilingual-e5 on MLX; en/uk. Same darwin/arm64 marker and
    # lazy-import discipline as mlx-lm (embed_index.MLXEmbedder); CI never
    # installs it and falls back to the numpy HashingEmbedder.
    "mlx-embeddings>=0.0.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # soundfile + numpy power the channel-aware speaker labelling fallback
    # used when FluidAudio diarization fails (rare; surfaced via
    # `diarization_failed: true` in the sidecar).
    "soundfile>=0.12.1",
    "numpy>=1.26",
    # Notion + auth + retries.
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.1",
    "ruff>=0.5.0",
    # T3: coverage measurement. Not a CI gate (no threshold is enforced); it is
    # what `scripts/coverage.sh` reports so the untested surface is a number
    # rather than a hunch.
    "pytest-cov>=5.0.0",
    # TYPE1: the package is near-universally annotated; pyright is what makes the
    # annotations load-bearing. Basic mode over src/ only, for now.
    "pyright>=1.1.400",
]

[project.scripts]
mp = "mp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mp"]

[tool.ruff]
line-length = 100
target-version = "py311"

# TYPE1. Basic mode over src/ only: tests/ is full of deliberately-partial fakes
# and would need its own pass. Ratcheting to strict is a later decision.
#
# CI installs a light dependency set (no mlx-lm / mlx-embeddings: darwin/arm64
# wheels only, and no huggingface_hub, which rides in with them), so those three
# imports would be unresolved there. They are suppressed at their (lazy) import
# sites with `# pyright: ignore[reportMissingImports]` rather than globally, so a
# genuine typo in any other import still fails the build.
[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
# Resolve imports against the project venv. Without this, a direct
# `.venv/bin/pyright` (how CI invokes it, and how `ruff` / `pytest` are invoked
# there) reports every third-party import as unresolved, because pyright reads
# the interpreter from config, not from argv[0].
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
